"fixed the overlap issue"

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,7 @@ body {
     font-size: 20px;
     padding: 16px;
     margin: auto;
+
 }
 
 /*-------------------------- scores */
@@ -104,26 +105,27 @@ body {
 
 /* ------------------------- card section */
 
-.game-container {
-    margin: 0;
+
+game-container {
+    margin: 10px;
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
     perspective: 1000px;
 }
 
 .row {
-    text-align: center
+    text-align: center;
 }
 
-.playing-card {
-    display: inline-block;
-    align-content: center;
+.card {
+    display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    position: relative;
     margin: 20px;
     padding: 5px;
     width: 130px;
@@ -132,39 +134,41 @@ body {
     background-color: #fff;
     cursor: pointer;
     box-shadow: 1px 1px 1px 1px #595854;
+}
+
+.card:hover {
+    border: 1px black solid;
+}
+
+.playing-card {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    overflow: hidden;
+    backface-visibility: hidden;
     transform-style: preserve-3d;
     transition: transform 0.7s;
 }
 
-.playing-card:hover {
-    border: 1px black solid;
+
+.card-value {
+    position: relative;
+    height: 100px;
+    width: 120px;
 }
 
-.card-back {
-    position: relative;
-    width: 120px;
-    height: 165px;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
-    background-color: #fff;
-    backface-visibility: hidden;
+.card.visible .card-back {
+    transform: rotateY(-180deg);
+}
+
+.card.visible .card-front {
+    transform: rotateY(0);
 }
 
 .card-front {
-    background-color: #fff;
-    position: absolute;
-    width: 120px;
-    height: 100px;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
-    backface-visibility: visible;
-
-}
-
-.playing-card.face-hidden {
     transform: rotateY(180deg);
 }
